chane graphic of posts